test/code/vue/syntax-error/no-china-html-js-syntax.vue
<template>
  <section class="guide-wrap-section">
    <p>hello</p>
  </section>
</template>

<script>
const a =;
const comp = {
  async mounted() {},
  data() {},
  methods: {
    goToSupplierEnter() {
      this.$router.push({
        name: 'companyEnter',
      });
    },
  },
};
</script>
